# fst

./: FSTStudio.hs  Main.hs  README.md  fst.cabal
Data/FST/: Alex.hs  Arguments.hs  Automaton.hs  AutomatonInterface.hs  AutomatonTypes.hs  Complete.hs  Deterministic.hs  DeterministicT.hs  EpsilonFreeT.hs  FSTStudio.hs  Info.hs  LBFA.hs  LBFT.hs  Lexer.hs  NReg.hs  Parse.hs  RRegTypes.hs  RegTypes.hs  Reversal.hs  ReversalT.hs  RunTransducer.hs  Transducer.hs  TransducerInterface.hs  TransducerTypes.hs  Utils.hs
FST/: Arguments.hs  Automaton.hs  AutomatonInterface.hs  AutomatonTypes.hs  Complete.hs  Deterministic.hs  DeterministicT.hs  EpsilonFreeT.hs  FSTStudio.hs  Info.hs  LBFA.hs  LBFT.hs  Lexer.hs  Main.hs  NReg.hs  Parse.hs  RRegTypes.hs  RegTypes.hs  Reversal.hs  ReversalT.hs  RunTransducer.hs  Transducer.hs  TransducerInterface.hs  TransducerTypes.hs  Utils.hs
tests/: drink.fst  drink.hs  email.fst  email.hs  not.fst  numbers.fst  properties.hs
