name:                fst
version:             0.10.0.0
synopsis:            Finite state transducers
description:         Fst is an application for construction and running of
                     finite state transducers, as based on the concepts
                     of transducers and regular relations developed by Xerox.
                     The syntax of Xerox's fst program has functioned as an
                     inspiration for the syntax of fstStudio.
                     .
                     The application was written purely in Haskell,
                     and is intended to be a tool for the Haskell
                     programmer, especially for ones that develop
                     language applications.
                     .
                     This package provides an interactive shell for
                     parsing transducers specified in a specialized
                     FST language. See 'FST.Main'.
                     .
                     This package also provides a programmer's
                     interface for building and applying
                     transducers. See 'FST.TransducerInterface'.

category:            Compilers/Interpreters
license:             BSD3
license-file:        LICENSE
author:              Markus Forsberg
maintainer:          Baldur Blöndal, John J. Camilleri
homepage:            http://www.cse.chalmers.se/alumni/markus/fstStudio/
package-url:         https://github.com/johnjcamilleri/fst
bug-reports:         https://github.com/johnjcamilleri/fst/issues
build-type:          Simple
cabal-version:       >= 1.8

data-files:          tests/drink.fst, tests/email.fst

library
        build-depends:       base>=4 && <5, array, mtl, transformers, haskeline, QuickCheck
        exposed-modules:     FST.Alex, FST.Arguments, FST.Automaton, FST.AutomatonInterface, FST.AutomatonTypes,
                             FST.Complete, FST.Deterministic, FST.DeterministicT, FST.EpsilonFreeT,
                             FST.Info, FST.LBFA, FST.LBFT, FST.Lexer, FST.NReg, FST.Parse, FST.RegTypes,
                             FST.Reversal, FST.ReversalT, FST.RRegTypes, FST.RunTransducer,
                             FST.Transducer, FST.TransducerInterface, FST.TransducerTypes, FST.Utils,
                             FST.Main
        ghc-options:         -O2
        ghc-prof-options:    -prof -auto-all

executable fst
        main-is:             FST/Main.hs
        ghc-options:         -O2
        ghc-prof-options:    -prof -auto-all
        build-depends:       base, array, mtl, transformers, haskeline

executable emailexample
        main-is:             tests/email.hs
        build-depends:       base, array, mtl, transformers, haskeline

test-suite test-fst
        type:                exitcode-stdio-1.0
        hs-source-dirs:      tests
        main-is:             properties.hs
        build-depends:       base, fst, QuickCheck
